--- a/frontend/project-2/src/App.css
+++ b/frontend/project-2/src/App.css
@@ -21,7 +21,7 @@ body {
   text-rendering: optimizeLegibility;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/image.jpg");
+  background-image: url("https://flatironschool.com/wp-content/uploads/2021/11/images-web-1800x800-austin-2.png");
   background-size: cover;
   background-repeat: none;
 }
@@ -120,8 +120,8 @@ body {
 }
 .container .left .people .person img {
   float: left;
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
   margin-right: 12px;
   border-radius: 50%;
   -o-object-fit: cover;
